# sag

./: .gitignore  CLAUDE.md  README.md  pom.xml  sag.g4  session
.github/workflows/: maven.yml  python.yml
bench/benchmarks/: context_budget.py  fold_compression.py  roundtrip_fidelity.py  token_efficiency.py
bench/fixtures/: conversations.py
demo/: claude_client.py  demo.py  fold_agent.py  interactive_demo.py  memory.py  openai_client.py  pyproject.toml  requirements.txt  root_agent.py  transport.py  tree_demo.py  tree_ui.py  ui.py
demo/prompts/: fold_system.txt  root_system.txt
python-sag/: .gitignore  Makefile  pyproject.toml  requirements.txt
python-sag/src/sag/: __init__.py  checkpoint.py  context.py  correlation.py  exceptions.py  expression.py  fold.py  grove.py  guardrail.py  knowledge.py  minifier.py  model.py  parser.py  prompt.py  sanitizer.py  schema.py  tree.py  visitor.py
python-sag/src/sag/profiles/: __init__.py  software_dev.py
python-sag/tests/: test_chat_session.py  test_checkpoint.py  test_correlation.py  test_expression.py  test_fold.py  test_grove.py  test_guardrail.py  test_interactive_grove.py  test_knowledge.py  test_minifier.py  test_parser.py  test_profiles_software_dev.py  test_prompt.py  test_sanitizer.py  test_schema.py  test_tree.py
src/main/antlr4/: SAG.g4
src/main/java/com/sentrius/sag/: Context.java  CorrelationEngine.java  ExpressionEvaluator.java  GuardrailValidator.java  MapContext.java  MessageMinifier.java  SAGMessageParser.java  SAGModelVisitor.java  SAGParseException.java  SchemaRegistry.java  SchemaValidator.java  (+1 more)
(+24 files in other folders)
