[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sag-demo"
version = "1.0.0"
description = "SAG Live Demo - Chatbot with fold/unfold and live metrics"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "rich>=13.0",
]

[project.optional-dependencies]
claude = [
    "anthropic>=0.40.0",
]
openai = [
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
sag-demo = "demo:main"
