[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sag"
version = "1.0.0"
description = "Semantic Action Grammar - Python parsing library for structured inter-agent communication"
requires-python = ">=3.10"
dependencies = [
    "antlr4-python3-runtime==4.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
